--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,12 +50,14 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/dosis_semibold"
                             android:textColor="@color/black"
+                            android:textSize="16dp"
                             android:layout_weight="1"
                             android:text="May-Money" />
                         <TextView
                             android:id="@+id/textAmount"
                             android:layout_width="match_parent"
                             android:textColor="@color/black"
+                            android:textSize="20dp"
                             android:gravity="center_vertical"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/dosis_semibold"
@@ -215,7 +217,54 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:orientation="vertical"
+                    >
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="Promo"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/dosis_medium"
+                        android:textSize="16dp"/>
+
+                    <androidx.cardview.widget.CardView
+                        app:cardCornerRadius="6dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:ignore="MissingConstraints">
+
+                            <com.smarteist.autoimageslider.SliderView
+                                android:id="@+id/imageSlider"
+                                android:layout_width="match_parent"
+                                android:layout_height="150dp"
+                                app:sliderAnimationDuration="600"
+                                app:sliderAutoCycleDirection="back_and_forth"
+                                app:sliderAutoCycleEnabled="true"
+                                app:sliderIndicatorAnimationDuration="600"
+                                app:sliderIndicatorGravity="center_horizontal|bottom"
+                                app:sliderIndicatorMargin="15dp"
+                                app:sliderIndicatorOrientation="horizontal"
+                                app:sliderIndicatorPadding="3dp"
+                                app:sliderIndicatorRadius="2dp"
+                                app:sliderIndicatorSelectedColor="#5A5A5A"
+                                app:sliderIndicatorUnselectedColor="#FFF"
+                                app:sliderScrollTimeInSec="3"
+                                app:sliderStartAutoCycle="true" />
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
