--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,11 +24,22 @@
                     android:layout_height="200dp"
                     android:src="@drawable/ic_baseline_person_24"
                     />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Your QR"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:fontFamily="@font/dosis_medium"
+                android:layout_marginVertical="10dp"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:padding="50dp"
-            android:layout_height="match_parent">
+            android:padding="20dp"
+            android:layout_height="wrap_content">
 
 
             <androidx.cardview.widget.CardView
@@ -40,6 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
+                    android:background="#80FFCC00"
                     android:orientation="vertical">
 
 
